crates/carta/tests/snapshots/golden_writer__latex__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lrcl@{}}
\toprule\noalign{}
l & r & c & d \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
1 & 2 & 3 & 4 \\
\end{longtable}
}
