crates/carta/tests/snapshots/golden_writer__latex__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{longtable}[]{@{}ll@{}}
\caption{Captioned and attributed}\label{tbl}\tabularnewline
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & b \\
\end{longtable}
