crates/carta/tests/snapshots/golden_writer__latex__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{longtable}[]{@{}l@{}}
\caption{First caption paragraph\\
Second caption paragraph}\tabularnewline
\toprule\noalign{}
h \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
h \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
v \\
\end{longtable}
