crates/carta/tests/snapshots/golden_writer__latex__table__table-caption-div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{longtable}[]{@{}ll@{}}
\caption{}\tabularnewline
\toprule\noalign{}
\endfirsthead
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & b \\
\end{longtable}
