crates/carta/tests/snapshots/golden_writer__latex__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
left & right \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
x & \\
& y \\
\end{longtable}
}
