crates/carta/tests/snapshots/golden_writer__latex__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}@{}}
\toprule\noalign{}
name & notes \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
alpha & first paragraph

\begin{itemize}
\tightlist
\item
  one
\item
  two
\end{itemize} \\
\end{longtable}
}
