crates/carta/tests/snapshots/golden_writer__latex__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lll@{}}
\toprule\noalign{}
col1 & col2 & col3 \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & spaced text & trailing  \\
\end{longtable}
}
