crates/carta/tests/snapshots/golden_writer__latex__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}@{}}
\toprule\noalign{}
product & note \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
\vtop{\hbox{\strut multi}\hbox{\strut line cell}} & plain \\
\end{longtable}
}
