crates/carta/tests/snapshots/golden_writer__latex__table__table-cluster-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lllll@{}}
\toprule\noalign{}
signs & selector & joined & narrow & mark \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
⌚⭐✅ & ☀️1️⃣ & 👨‍👩‍👧👍🏽 & ㉈゙ & ́abc \\
\end{longtable}
}
